# mypromptflow

./: .gitignore  .jira  .mcp.json  CLAUDE.md  CLAUDEOLD.md  CLEANUP-SUMMARY.md  COMPREHENSIVE_TESTING_RESULTS_SUMMARY.md  CONSOLIDATION-VALIDATION-REPORT.md  GEMINI.md  MCP-SYSTEM-IMPROVEMENT-TASKS.md  PULL_REQUEST_SUMMARY.md  README.md  SCRUM-33-final-comments.md  cleanup-duplicates.sh  cleanup-execution-log.md  cli_config.sh  comprehensive-mcp-hook.sh  debug-hook.sh  duplicate-analysis-detailed.md  duplicate-mapping-analysis.md  execute-cleanup.sh  figma-mcp-wrapper.sh  frontend-design-mcp-discovery-progress.md  frontend-ux-mcp-discovery-report.md  git-worktree-implementation-guide.md  knowledge-vault-duplicate-cleanup-report.md  maritime-insurance-frontend-aws-docker-instructions.md  maritime-insurance-frontend-updated-instructions.md  mcp-server-consolidation-analysis.md  proper-hook.sh  role_aware_system_test_report.json  setup.sh  simple-test-hook.sh  test_role_aware_system.py  ultra-simple-hook.sh  validate-cleanup.sh
projects/universal-topic-intelligence-system/: CLAUDE.md  IMPLEMENTATION_SUMMARY.md  PHASE-2-COMPLETION-REPORT.md  PHASE2_COMPLETION_SUMMARY.md  README.md  SYSTEM_GUIDE.md  analytics_summary.py  auto_monitor.py  auto_monitor_universal.py  clean_irrelevant_content.py  cli.py  collect.py  dashboard.py  dashboard_proper.py  dashboard_universal.py  demo.py  enhanced_universal_monitor.py  hierarchical_monitor.py  integration_test_report.json  intelligence_system.py  mcp-server-information-capabilities-metadata.yaml  mcp_execution_plan.txt  monitor.py  (+51 more)
(+3060 files in other folders)
